Adding Python package build requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "mp-api",
     "vise",
     "pydefect",
-    "sumo"
+    "sumo",
+    "pymatgen-analysis-defects"
 ]
 
 [project.urls]
