--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "radDefects"
+name = "raddefects"
 version = "0.1.3"
 authors = [
   { name="Alexander Hauck", email="ash5615@psu.edu" },
@@ -31,7 +31,7 @@ Homepage = "https://radDefects.readthedocs.io/en/latest/"
 Repository = "https://github.com/hauck-as/radDefects"
 
 [project.scripts]
-cli-name = "radDefects.cli.main:main"
+cli-name = "raddefects.cli.main:main"
 
 [tool.setuptools.packages]
 find = {}  # Scan the project directory with the default parameters
