--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "raddefects"
-version = "0.1.3"
+dynamic = ["version"]
 authors = [
   { name="Alexander Hauck", email="ash5615@psu.edu" },
 ]
@@ -36,6 +36,10 @@ cli-name = "raddefects.cli.main:main"
 [tool.setuptools.packages]
 find = {}  # Scan the project directory with the default parameters
 
+[tool.setuptools_scm]
+# version_scheme = "only-version"
+local_scheme = "no-local-version"
+
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
