Update documentation import mocks and package requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "mp-api",
     "vise",
     "pydefect",
+    "nonrad",
+    "doped",
     "sumo",
     "pymatgen-analysis-defects",
     "niet"
